# Toy-Qwen

./: .gitignore  README.md  infer.py  main.py  pyproject.toml  train.py
configs/: nano_gpt2.py
data/: dataset.py  peek.py  prepare.py
models/: nano_gpt2.py  nano_gpt2_torch.py  registry.py
models/layers/scratch/: attention.py  ffn.py  init.py  norm.py  positional.py
models/layers/torch/: attention.py  ffn.py  norm.py  positional.py
optim/scratch/: adamw.py
optim/torch/: adamw.py
utils/: checkpoint.py  generate.py  logger.py  tool.py
