[project]
name = "toy-qwen"
version = "0.1.0"
description = "Understanding Large Language Models from Scratch on Apple Silicon"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.4.0",
    "tiktoken>=0.9.0",
    "datasets>=3.0.0",
    "numpy>=2.0.0",
    "httpx[socks]>=0.28.0",
]

[project.scripts]
toy-peek    = "data.peek:main"
toy-prepare = "data.prepare:main"
toy-train   = "train:main"
toy-infer   = "infer:main"

[tool.hatch.build.targets.wheel]
packages = ["data", "models", "optim", "configs", "utils", "models/layers/torch", "models/layers/scratch", "optim/torch", "optim/scratch"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
